Add activity APIs